# arbiter

./: .env.example  .gitignore  ARCHITECTURE.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  TODO.md  pyproject.toml
.github/workflows/: ci.yml  e2e.yml  integration.yml
benchmarks/: ablation_nohints.json  ablation_retries0.json  ablation_retries1.json  ablation_retries3.json  ablation_timeout30.json  audit_formalmath.py  audit_sample_30.json  auto_audit.py  formalmath_audit_results.json  formalmath_bench.py  formalmath_gpt-5.4-mini_test30.json  full_audit_results.json  kd_ablation_retries0.json  kd_all_gpt-5.4-mini.json  kd_bench.py  kd_bench_v3.py  kd_hard_claude-sonnet-4-5-20250929_20260414_053854.json  kd_hard_gpt-4o.json  kd_hard_gpt-5.4-mini_20260414_052707.json  kd_hard_gpt-5.4-mini_s123.json  kd_hard_gpt-5.4-mini_s7.json  kd_hard_gpt-5.4-mini_s999.json  kd_hard_gpt-5.4_20260414_054446.json  kd_hard_mini_v2.json  kd_hard_sonnet_v2.json  kd_v3.1_all_mini.json  kd_v3.1_hard_mini.json  kd_v3_all_mini_s123.json  kd_v3_all_mini_s7.json  kd_v3_all_sonnet.json  kd_v3_cross.py  kd_v3_hard_5.4.json  kd_v3_hard_claude-sonnet-4-5-20250929_20260414_061732.json  kd_v3_hard_gpt-5.4-mini_20260414_061730.json  kd_v3_hard_mini_s123.json  kd_v3_hard_mini_s7.json  kd_v3_hard_mini_s999.json  kd_v3_math5_claude-sonnet-4-5-20250929_20260414_070231.json  kd_v3_math5_gpt-5.4-mini_20260414_070231.json  kd_v3_proofnet_claude-sonnet-4-5-20250929_20260414_070230.json  (+29 more)
benchmarks/audit/: aime_1983_p2.problem  aime_1983_p2.py  aime_1984_p1.problem  aime_1984_p1.py  aime_1987_p5.problem  aime_1987_p5.py  aime_1988_p8.problem  aime_1988_p8.py  aime_1989_p8.problem  aime_1989_p8.py  aime_1990_p15.problem  aime_1990_p15.py  aime_1990_p4.problem  aime_1990_p4.py  aime_1994_p3.problem  aime_1994_p3.py  aime_1995_p7.problem  aime_1995_p7.py  aime_1997_p9.problem  aime_1997_p9.py  aime_1999_p11.problem  aime_1999_p11.py  imo_1959_p1.problem  imo_1959_p1.py  imo_1960_p2.problem  imo_1960_p2.py  imo_1962_p2.problem  (+19 more)
configs/: quickstart.yaml
experiments/: E2E_TEST_REPORT.md  E2E_TEST_REPORT_v2.md
paper/: draft.md
papers/: arbiter_paper.tex  arbiter_systems_paper.tex
tests/: conftest.py  test_anthropic_fallback.py  test_config.py  test_config_validation.py  test_custom_provider.py  test_export_argdown.py  test_export_markdown.py  test_formal_model_extractor.py  test_gate_confidence_and_matching.py  test_gate_entailment.py  test_gate_pattern.py  test_gate_shift.py  test_init_interactive.py  test_init_pipeline_hardening.py  test_integration.py  test_jinja_agent_prompts.py  test_jinja_rendering.py  test_judge_aggregator.py  test_judge_rubric.py  test_ledger.py  test_ledger_e2e.py  test_ledger_gate.py  test_llm_gate_adversarial.py  test_llm_gate_calibration.py  test_mini_ledger.py  test_openai_schema_dynamic.py  test_panel_verdict_tiebreak.py  test_provider_thinking_config.py  test_pydantic_integration.py  test_retrieval_local.py  test_strip_markdown_fences.py
web-init/: config.yaml  live_init.html
(+2177 files in other folders)
